add bird's disable

--- a/Assets/Sources/Views/Views.asmdef
+++ b/Assets/Sources/Views/Views.asmdef
@@ -1,4 +1,4 @@
 {
   "name": "Views",
-  "references":[ "GUID:a277fc5f354844ec91ada62005a882d7", "GUID:76226dea5a5b4078ab5e4f4417e46e04" ]
+  "references":[ "GUID:a277fc5f354844ec91ada62005a882d7", "GUID:76226dea5a5b4078ab5e4f4417e46e04", "GUID:81746b1ed0a9410983a02e50267a1190" ]
 }
